--- a/package.json
+++ b/package.json
@@ -9,24 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20.10.6",
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18",
-    "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.41.0",
-    "jose": "^5.2.0",
-    "lucide-react": "^0.263.1",
     "next": "^14.2.0",
-    "postgres": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.3.3",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.23",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.4.19"
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "postgres": "^3.4.3",
+    "bcryptjs": "^2.4.3",
+    "@types/bcryptjs": "^2.4.6",
+    "jose": "^5.2.0",
+    "zod": "^3.22.4",
+    "lucide-react": "^0.263.1",
+    "cloudinary": "^1.41.0"
   }
 }
